# realtime_plotter_based_matplotlibcpp

./: CMakeLists.txt  README.md  main.cpp
include/: matplotlibcpp.h  plotter.h
